--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 body {
     background-color: #dddddd;
     padding: 16px;
+    display: flex;
+    flex-direction: column;
 }
 
 .heading{
@@ -33,8 +35,14 @@ h2{
     padding: 16px;
 }
 
+.grid{
+    width: 400px;
+    height: 400px;
+    margin: 0px auto;
+}
+
 .sectionContainer{
-    width: fit-content;
+    width: 80%;
     margin: 0px auto;
     padding: 16px 0;
 }
@@ -45,4 +53,25 @@ h2{
     font-weight: 600;
     text-align: center;
     margin-bottom: 16px;
+}
+
+.gridButtons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    gap: 8px;
+}
+
+button{
+    padding: 16px 32px;
+    background-color: #111111;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+}
+
+.reset{
+    width: fit-content;
+    margin: 0 auto;
+    padding: 32px 0px;
 }
