--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,11 @@ button{
     font-size: 16px;
 }
 
+button:hover{
+    cursor: pointer;
+    background-color: #2e2e2e;
+}
+
 .reset{
     width: fit-content;
     margin: 0 auto;
